update main page

--- a/index.html
+++ b/index.html
@@ -11,36 +11,87 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header id="main-header">
-    <div class="container">
-        <div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
-            <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-                <h1><span class="primary-text">Shoaib </span> <span class="secondprimary-text">Zaheer</span></h1>
-            </div>
-            <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
-                <nav id="navbar">
-                    <ul>
-                        <li class="current"><a href="index.html">Home</a></li>
-                        <li><a href="painting.html">Painting</a></li>
-                        <li><a href="animation.html">Animation</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
-</header>
+
 <section class="showcase">
     <div class="video-container">
         <video src="video/video.mp4" autoplay muted loop></video>
     </div>
     <div class="content">
-        <h2>Multi Media Artiest</h2>
-        <h3>full screen video landing page</h3>
+        <h2>Shoaib Zaheer</h2>
+        <h3>Multimedia Artiest and Animator</h3>
         <a href="#about" class="btn">Read More</a>
     </div>
 </section>
+
+<div class="container1">
+    
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/img1.jpg" alt="LandScape">
+          <div class="details">
+            <div class="content">
+              <h2>Water Color Drawing</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
+                 <a href="_blank" class="btn">Water Color Gallery</a>
+            </div>  
+          </div>
+        </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/img2.png" alt="LandScape">
+          <div class="details">
+            <div class="content">
+              <h2>Water Color Drawing</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
+                 <a href="_blank" class="btn">Drawing Gallery</a>
+            </div>  
+          </div>
+        </div>
+    </div>
+    
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/img1.jpg" alt="LandScape">
+          <div class="details">
+            <div class="content">
+              <h2>Water Color Drawing</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
+                 <a href="_blank" class="btn">Oil Color Gallery</a>
+            </div>  
+          </div>
+        </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/img2.png" alt="LandScape">
+          <div class="details">
+            <div class="content">
+              <h2>Water Color Drawing</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
+                 <a href="_blank" class="btn">Computer Graphic Gallery</a>
+            </div>  
+          </div>
+        </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/img1.jpg" alt="LandScape">
+          <div class="details">
+            <div class="content">
+              <h2>Water Color Drawing</h2>
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p> -->
+                 <a href="_blank" class="btn">Water Color Gallery</a>
+            </div>  
+          </div>
+        </div>
+    </div>
+
+  </div>
+
 <section id="about">
     <h2>About</h2>
     <p>
