menu is updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,45 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!-- Menu start from here -->
+  <div class="container">
+    <nav class="navbar">
+      <div class="hamburger-menu">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+      </div>
+      <ul class="nav-list">
 
+        <li class="nav-item">
+          <a href="#" class="nav-link">Home</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#" class="nav-link">About</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#" class="nav-link">Gallery</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#" class="nav-link">Exhibition</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#" class="nav-link">Sale</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#" class="nav-link">Contact</a>
+        </li>
+
+      </ul>
+    </nav>
+ 
+
+<!-- main page start from here -->
 <section class="showcase">
     <div class="video-container">
         <video src="video/video.mp4" autoplay muted loop></video>
@@ -83,7 +121,7 @@
           <div class="details">
             <div class="content">
               <h2>Water Color Drawing</h2>
-              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p> -->
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
                  <a href="_blank" class="btn">Water Color Gallery</a>
             </div>  
           </div>
@@ -91,6 +129,8 @@
     </div>
 
   </div>
+
+</div>
 
 <section id="about">
     <h2>About</h2>
@@ -108,5 +148,6 @@
         <a href="_blank" target = "_blank"><i class="fab fa-github fa-3x"></i></a>
     </div>
 </section>
+<script src="script.js"></script>
 </body>
 </html>
