update social media logos

--- a/index.html
+++ b/index.html
@@ -132,22 +132,70 @@
 
 </div>
 
-<section id="about">
-    <h2>About</h2>
-    <p>
-        My work is exploration, affirmation from
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis voluptatum quibusdam 
-        commodi ad unde, qui necessitatibus excepturi consectetur odio veritatis et impedit cumque 
-        numquam optio cupiditate sapiente! Ea, iure tenetur?
-    </p>
-    <h3>Follow me on social media</h3>
-    <div class="social">
-        <a href="https://www.facebook.com/shoaibartt" target = "_blank"><i class="fab fa-facebook fa-3x"></i></a>
-        <a href="_blank" target = "_blank"><i class="fab fa-twitter fa-3x"></i></a>
-        <a href="_blank" target = "_blank"><i class="fab fa-youtube fa-3x"></i></a>
-        <a href="_blank" target = "_blank"><i class="fab fa-github fa-3x"></i></a>
-    </div>
+<section id="company">
+  <div>
+      <div class="row">
+          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <h4>Contact Us</h4>
+              <ul>
+                  <li><i class="fa fa-phone"></i> (+32) 234 234234</li>
+                  <li><i class="fa fa-envelope"></i> support@support.com</li>
+                  <li><i class="fa fa-map"></i> Night and day start</li>
+              </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> 
+              <h4>About US</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!</p> 
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <h4>Newsletter</h4>
+          <p>Lorem ipsum dolor sit amet</p>
+              <form>
+                  <input type="text" name="email">
+                  <button type="submit" name="button">Submit</button>
+              </form>
+          </div>
+      </div>
+  </div>
 </section>
+<!--INFO SECTION-->
+<section id="info">
+  <div class="container">
+      <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="social">
+              <a href="https://www.facebook.com/shoaibartt" target = "_blank"><i class="fab fa-facebook fa-3x"></i></a>
+              <a href="_blank" target = "_blank"><i class="fab fa-instagram fa-3x"></i></a>
+              <a href="_blank" target = "_blank"><i class="fab fa-twitter fa-3x"></i></a>
+              <a href="_blank" target = "_blank"><i class="fab fa-youtube fa-3x"></i></a>
+              <a href="_blank" target = "_blank"><i class="fab fa-github fa-3x"></i></a>
+          </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+              <h2>News & Updates</h2>
+              <ul>
+                  <li><a href="" class="info-down">About</a></li>
+                  <li><a href="" class="info-down">Gallery</a></li>
+                  <li><a href="" class="info-down">Shop</a></li>
+                  <li><a href="" class="info-down">Contact</a></li>
+                  <li><a href="" class="info-down">Resume</a></li>
+              </ul>
+          </div>
+      </div>
+  </div>
+</section>
+
+<!-- FOOTER-->
+<footer id="main-footer">
+  <div class="container">
+      <div class="row center-xs center-sm center-md center-lg">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+              <p>Copyright &copy; 2020 | ShoaibZaheer</p>
+          </div>
+      </div>
+  </div>
+</footer>
+
 <script src="script.js"></script>
 </body>
 </html>
