update watercolor gallery

--- a/waterColor/waterColor.html
+++ b/waterColor/waterColor.html
@@ -63,24 +63,39 @@
     <div class="items">
     <!-- <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"> -->
         <div class="img-box-shadow">
-          <a href="../images/img2.jpg" data-lightbox="mygallery"><img src="../images/img2-small.png" alt="landScape"></a>
+          <a href="waterColor32.jpg" data-lightbox="mygallery"><img src="waterColor32-small.jpg" alt="landScape"></a>
+          <p>Will paintined</p>
+        </div>
+        
+        <div class="img-box-shadow">
+          <a href="waterColor31.jpg" data-lightbox="mygallery"><img src="waterColor31-small.jpg" alt="landScape"></a>
+          <p>Will paintined</p>
+        </div>
+      
+        <div class="img-box-shadow">
+          <a href="waterColor30.jpg" data-lightbox="mygallery"><img src="waterColor30-small.jpg" alt="landScape"></a>
           <p>Will paintined</p>
         </div>
 
         <div class="img-box-shadow">
-          <a href="../images/img1.jpg" data-lightbox="mygallery" data-title="Country side"><img src="../images/img1-small.jpg" alt="landScape"></a>
+          <a href="waterColor29.jpg" data-lightbox="mygallery"><img src="waterColor29-small.jpg" alt="landScape"></a>
+          <p>Will paintined</p>
         </div>
 
         <div class="img-box-shadow">
-          <a href="../images/img3.png" data-lightbox="mygallery"><img src="../images/img4-small.jpg" alt="landScape"></a>
+          <a href="waterColor28.jpg" data-lightbox="mygallery" data-title="Country side"><img src="waterColor28-small.jpg" alt="landScape"></a>
         </div>
 
         <div class="img-box-shadow">
-          <a href="https://www.youtube.com/watch?v=FlyO8YEYfOk" data-lightbox="mygallery"><img src="../images/img2-small.png" alt="landScape"></a>
+          <a href="waterColor27.jpg" data-lightbox="mygallery"><img src="waterColor27-small.jpg" alt="landScape"></a>
         </div>
 
         <div class="img-box-shadow">
-          <a href="../images/img4.jpg" data-lightbox="mygallery"><img src="../images/img4-small.jpg" alt="landScape"></a>
+          <a href="waterColor26.jpg" data-lightbox="mygallery"><img src="waterColor26-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor25.jpg" data-lightbox="mygallery"><img src="waterColor25-small.jpg" alt="landScape"></a>
         </div>
     <!-- </div> -->
     </div>
@@ -91,13 +106,13 @@
   <div>
         <div>
               <h4>About</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!
-                Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!
-                Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!
-                Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!
-                Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit <a href="_blank">libero quae!</a>
+              <p>Shoaib Zaheer an afghan artist, at present base in Belgium, 
+                 I am self study & motivated artiest, able to work with different art media (water color, 
+                 oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic) computer graphic designer, 
+                 animator, illustrator, 3D model, video editor amd HTML, CSS code writer, 
+                 with little bit JavaScript knowledge. <a href="about.html">Read More...</a>
                </p>
-        </div>>
+        </div>
     </div>
 </section>
 
