--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
     <div class="box">
       <div class="imgBox">
-        <img src="images/img1.jpg" alt="LandScape">
+        <img src="images/img3.jpg" alt="LandScape">
           <div class="details">
             <div class="content">
               <h2>Computer Graphic and Art</h2>
@@ -124,7 +124,7 @@
 
     <div class="box">
       <div class="imgBox">
-        <img src="images/img1.jpg" alt="LandScape">
+        <img src="images/img5.jpg" alt="LandScape">
           <div class="details">
             <div class="content">
               <h2>Mix Media</h2>
@@ -143,11 +143,11 @@
   <div>
         <div>
               <h4>About</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!
-                Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!
-                Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!
-                Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit libero quae!
-                Lorem ipsum dolor sit amet, consectetur adipisicing, nam suscipit impedit <a href="_blank">libero quae!</a>
+              <p>Shoaib Zaheer an afghan artist, at present base in Belgium, 
+                I am self study & motivated artiest, able to work with different art media (water color, 
+                oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic) computer graphic designer, 
+                animator, illustrator, 3D model, video editor amd HTML, CSS code writer, 
+                with little bit JavaScript knowledge. <a href="about.html">Read More...</a>
                </p>
         </div>
   </div>
