some small changes in index.html

--- a/waterColor/waterColor.html
+++ b/waterColor/waterColor.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="../css/lightbox.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/lightbox-plus-jquery.min.js"></script>
-</head>
-<body>
-<!-- Menu start from here -->
+ </head>
+ <body>
+ <!-- Menu start from here -->
   <div class="container">
     <nav class="navbar">
       <div class="hamburger-menu">
@@ -24,7 +24,7 @@
       <ul class="nav-list">
 
         <li class="nav-item">
-          <a href="index.html" class="nav-link">Home</a>
+          <a href="/index.html" class="nav-link">Home</a>
         </li>
 
         <li class="nav-item">
@@ -57,9 +57,9 @@
       </ul>
     </nav>
  
-<!-- picture main page start from here -->
+ <!-- picture main page start from here -->
 
-<div class="gallery">
+ <div class="gallery">
     <div class="items">
     <!-- <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"> -->
         <div class="img-box-shadow">
@@ -99,24 +99,24 @@
         </div>
     <!-- </div> -->
     </div>
-</div>
+ </div>
 
-<!--INFO SECTION-->
-<section id="company">
-  <div>
-        <div>
+ <!--INFO SECTION-->
+ <section id="company">
+  
+        <div class="about-back">
               <h4>About</h4>
               <p>Shoaib Zaheer an afghan artist, at present base in Belgium, 
                  I am self study & motivated artiest, able to work with different art media (water color, 
                  oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic) computer graphic designer, 
                  animator, illustrator, 3D model, video editor amd HTML, CSS code writer, 
-                 with little bit JavaScript knowledge. <a href="about.html">Read More...</a>
+                 with little bit JavaScript knowledge. <br><a href="about.html">Read More...</a>
                </p>
         </div>
-    </div>
-</section>
+    
+ </section>
 
-<section id="info">
+ <section id="info">
   <div class="container">
       <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
