--- a/about.html
+++ b/about.html
@@ -55,12 +55,12 @@
       </ul>
     </nav>
  
-</div>>
+</div>
 <!-- main page start from here -->
 
 <section id="company">
-  <div>
-        <div>
+  
+        <div class="about-back">
               <h4>About</h4>
               <p>Shoaib Zaheer an afghan artist, at present base in Belgium, I am self study & motivated artiest,
                  able to work with different art media (water color, oil color, pencil, charcoal, calligraphy,
@@ -85,10 +85,10 @@
                 <br>Petit Chateau  solo art exhibition of water color `Tournai`.
                 
                 <br>Night school of Art one week art workshop and exhibition `Tournai`. 
-                <br><a href="about.html">Read More...</a>
+                
                </p>
         </div>
-  </div>
+  
 </section>
 <!--INFO SECTION-->
 <section id="info">
