--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
 </div>
 
 <section id="company">
-  <div>
-        <div>
+  
+        <div class="about-back">
               <h4>About</h4>
               <p>Shoaib Zaheer an afghan artist, at present base in Belgium, 
                 I am self study & motivated artiest, able to work with different art media (water color, 
                 oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic) computer graphic designer, 
                 animator, illustrator, 3D model, video editor amd HTML, CSS code writer, 
-                with little bit JavaScript knowledge. <a href="about.html">Read More...</a>
+                with little bit JavaScript knowledge. <br><a href="about.html">Read More...</a>
                </p>
         </div>
-  </div>
+  
 </section>
 <!--INFO SECTION-->
 <section id="info">
