pencil and mix media updated

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="./animation/animation.html" class="nav-link">Animation</a>
             <a href="./computerGraphics/computerGraphics.html" class="nav-link">Computer Graphic</a>
             <a href="./Minuter/minuter.html" class="nav-link">Minuter</a>
+            <a href="./pencil&charcoal/Pencil&Charcoal.html" class="nav-link">Pencil & Charcoal</a>
             <a href="./mixMedia/mixMedia.html" class="nav-link">Mix Media</a>
           </div>
         </li>
@@ -115,6 +116,19 @@
           <div class="details">
             <div class="content">
               <h2>Minuter</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
+                 <a href="./Minuter/minuter.html" class="btn">Read More</a>
+            </div>  
+          </div>
+        </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/img4.jpg" alt="LandScape">
+          <div class="details">
+            <div class="content">
+              <h2>Pencil and Charcoal</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
                  <a href="./Minuter/minuter.html" class="btn">Read More</a>
             </div>  
