--- a/waterColor/waterColor.html
+++ b/waterColor/waterColor.html
@@ -35,10 +35,11 @@
           <a class="nav-link" id="drop-itDown">Gallery</a>
           <div class="dropdown-content" id="dropdown-item">
             <a href="waterColor.html" class="nav-link">Water Color</a>
-            <a href="./animation/animation.html" class="nav-link">Animation</a>
-            <a href="./computerGraphics/computerGraphics.html" class="nav-link">Computer Graphic</a>
-            <a href="./Minuter/minuter.html" class="nav-link">Minuter</a>
-            <a href="./mixMedia/mixMedia.html" class="nav-link">Mix Media</a>
+            <a href="../animation/animation.html" class="nav-link">Animation</a>
+            <a href="../computerGraphics/computerGraphics.html" class="nav-link">Computer Graphic</a>
+            <a href="../Minuter/minuter.html" class="nav-link">Minuter</a>
+            <a href="../pencil&charcoal/Pencil&Charcoal.html" class="nav-link">Pencil & Charcoal</a>
+            <a href="../mixMedia/mixMedia.html" class="nav-link">Mix Media</a>
           </div>
         </li>
 
@@ -110,7 +111,7 @@
                  I am self study & motivated artiest, able to work with different art media (water color, 
                  oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic) computer graphic designer, 
                  animator, illustrator, 3D model, video editor amd HTML, CSS code writer, 
-                 with little bit JavaScript knowledge. <br><a href="about.html">Read More...</a>
+                 with little bit JavaScript knowledge. <br><a href="../about.html">Read More...</a>
                </p>
         </div>
     
