updated watercolor images

--- a/waterColor/waterColor.html
+++ b/waterColor/waterColor.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="img-box-shadow">
-          <a href="waterColor28.jpg" data-lightbox="mygallery" data-title="Country side"><img src="waterColor28-small.jpg" alt="landScape"></a>
+          <a href="waterColor28.jpg" data-lightbox="mygallery" ><img src="waterColor28-small.jpg" alt="landScape"></a>
         </div>
 
         <div class="img-box-shadow">
@@ -98,6 +98,91 @@
         <div class="img-box-shadow">
           <a href="waterColor25.jpg" data-lightbox="mygallery"><img src="waterColor25-small.jpg" alt="landScape"></a>
         </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor20.jpg" data-lightbox="mygallery"><img src="waterColor20-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor19.jpg" data-lightbox="mygallery"><img src="waterColor19-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor18.jpg" data-lightbox="mygallery"><img src="waterColor18-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor17.jpg" data-lightbox="mygallery"><img src="waterColor17-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor16.jpg" data-lightbox="mygallery"><img src="waterColor16-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor15.jpg" data-lightbox="mygallery"><img src="waterColor15-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor14.jpg" data-lightbox="mygallery"><img src="waterColor14-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor13.jpg" data-lightbox="mygallery"><img src="waterColor13-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor12.jpg" data-lightbox="mygallery"><img src="waterColor12-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor11.jpg" data-lightbox="mygallery"><img src="waterColor11-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor10.jpg" data-lightbox="mygallery"><img src="waterColor10-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor09.jpg" data-lightbox="mygallery"><img src="waterColor09-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor08.jpg" data-lightbox="mygallery"><img src="waterColor08-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor07.jpg" data-lightbox="mygallery"><img src="waterColor07-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor06.jpg" data-lightbox="mygallery"><img src="waterColor06-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor05.jpg" data-lightbox="mygallery"><img src="waterColor05-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor04.jpg" data-lightbox="mygallery"><img src="waterColor04-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor03.jpg" data-lightbox="mygallery"><img src="waterColor03-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor02.jpg" data-lightbox="mygallery"><img src="waterColor02-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor01.jpg" data-lightbox="mygallery"><img src="waterColor01-small.jpg" alt="landScape"></a>
+        </div>
+
+        <div class="img-box-shadow">
+          <a href="waterColor00.jpg" data-lightbox="mygallery" data-title="Country side"><img src="waterColor00-small.jpg" alt="landScape"></a>
+        </div>
+
     <!-- </div> -->
     </div>
  </div>
