updated some new files

--- a/about.html
+++ b/about.html
@@ -68,8 +68,8 @@
                  and like to explore the world of computer code writing like HTML, CSS.</p>
 
                 <p>My art is exploration and affirmation into the emotion of subjects and idea by amalgamate of colors, forms and textures, to find  those sentiment in our surroundings.
-                  Ever since i was teenage, I have been fascinated by my childish immersed thoughts, in which we as human impose the environment as our maintor and walks in the shadow of that vast science and knowledge, in order to do prediction on ourself and out destiny.
-                  Human always searches to curve the environment to get his thoughts and the environment like a good maintor links one of his chain thoughts, and a new idea get born. </p>
+                  Ever since i was teenage, I have been fascinated by my childish immersed thoughts. How we human impose the environment as our maintor and walks in the shadow of that vast science and knowledge that our environment offer to us, in order to do prediction on ourself and out destiny.
+                  Human always searching ways to bend the environment, to get new thoughts, here the interesting thing going to happen! The environment like a good maintor give us the link of  one of his chain thoughts, and a new idea get bird. </p>
 
                 <p>Currently one of recognized artist, sponsor by Kunstencentrum Vooruit vzw / Arts Centre Vooruit
                   ("INFRA project 2019- 2020- 2021").</p>
