update exhibition images

--- a/exhibition.html
+++ b/exhibition.html
@@ -76,10 +76,11 @@
                           <img src="images/prev.png" class="prev" alt="prev">
                           <div class="slider-inner">
                     
-                            <img src="images/img1.jpg" alt="pic-1" class="active">
-                            <img src="images/img3.jpg" alt="pic-2">
-                            <img src="images/img4.jpg" alt="pic-3">
-                            <img src="images/img5.jpg" alt="pic-4">
+                            <img src="images/exhi01.jpg" alt="pic-1" class="active">
+                            <img src="images/exhi02.JPG" alt="pic-2">
+                            <img src="images/exhi03.JPG" alt="pic-3">
+                            <img src="images/exhi04.jpg" alt="pic-4">
+                            <img src="images/exhi05.jpg" alt="pic-5">
                     
                           </div>
                           <img src="images/next.png" class="next" alt="prev">
