--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 <!-- main page start from here -->
 <section class="showcase">
     <div class="video-container">
-        <video src="video/video.mp4" autoplay muted loop></video>
+        <video src="./video/one.mp4" autoplay muted loop></video>
     </div>
     <div class="content">
         <h2>Shoaib Zaheer</h2>
         <h3>Multimedia Artiest</h3>
-        <a href="#about" class="btn">Read More</a>
+        <a href="about.html" class="btn">Read More</a>
     </div>
 </section>
 <!-- Gallery section start from here -->
