cg pic 23 is updated

--- a/computerGraphics/computerGraphics.html
+++ b/computerGraphics/computerGraphics.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="img-box-shadow">
-          <a href="waterColor28.jpg" data-lightbox="mygallery" data-title="Country side"><img src="waterColor28-small.jpg" alt="landScape"></a>
+          <a href="cg23.jpg" data-lightbox="mygallery" ><img src="cg23-small.jpg" alt="landScape"></a>
         </div>
 
         <div class="img-box-shadow">
@@ -96,7 +96,7 @@
         </div>
 
         <div class="img-box-shadow">
-          <a href="cg20.jpg" data-lightbox="mygallery"><img src="cg20-small.jpg" alt="landScape"></a>
+          <a href="cg20.jpg" data-lightbox="mygallery" data-title="Country side"><img src="cg20-small.jpg" alt="landScape"></a>
         </div>
     <!-- </div> -->
     </div>
