--- a/about.html
+++ b/about.html
@@ -58,8 +58,7 @@
 </div>
 <!-- main page start from here -->
 
-<section id="company">
-  
+<section id="company" >
              <div class="about-back">
               <h4>About</h4>
               <p>Shoaib Zaheer an afghan artist, at present base in Belgium, I am self study & motivated artiest,
@@ -72,13 +71,13 @@
                   Human always searching ways to bend the environment, to get new thoughts, here the interesting thing going to happen! The environment like a good maintor give us the link of  one of his chain thoughts, and a new idea get bird. </p>
               </div>
               <div class="about-image">
-                <img src="#" alt="Shoaib Zaheer picture">
+                <img src="./waterColor/waterColor32.jpg" alt="Picture">
               </div>
-  
+            </div>
 </section>
 <!--INFO SECTION-->
 <section id="info">
-  <div class="container">
+  <div class="container" >
       <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="social">
