pencil page is updated

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
              <div class="about-back">
               <h4>About</h4>
               <div class="about-image">
-                <img src="./waterColor/waterColor32.jpg" alt="Picture">
+                <img src="./images/shoaib-picture.jpg" alt="Picture">
               </div>
               <p>Shoaib Zaheer an afghan artist, at present base in Belgium, I am self study & motivated artiest,
                  able to work with different art media (water color, oil color, pencil, charcoal, calligraphy,
@@ -71,7 +71,7 @@
 
                 <p>My art is exploration and affirmation into the emotion of subjects and idea by amalgamate of colors, forms and textures, to find  those sentiment in our surroundings.
                   Ever since i was teenage, I have been fascinated by my childish immersed thoughts. How we human impose the environment as our maintor and walks in the shadow of that vast science and knowledge that our environment offer to us, in order to do prediction on ourself and out destiny.
-                  Human always searching ways to bend the environment, to get new thoughts, here the interesting thing going to happen! The environment like a good maintor give us the link of  one of his chain thoughts, and a new idea get bird. </p>
+                  Human always searching ways to bend the environment, to get new thoughts, here the interesting thing going to happen! The environment like a good maintor give us the link of  one of his chain thoughts, and a new idea get birth. </p>
                   
                 </div>
              
