some new changes in all files

--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
             <a href="./animation/animation.html" class="nav-link">Animation</a>
             <a href="./computerGraphics/computerGraphics.html" class="nav-link">Computer Graphic</a>
             <a href="./Minuter/minuter.html" class="nav-link">Minuter</a>
+            <a href="./pencil&charcoal/Pencil&Charcoal.html" class="nav-link">Pencil & Charcoal</a>
             <a href="./mixMedia/mixMedia.html" class="nav-link">Mix Media</a>
           </div>
         </li>
