--- a/computerGraphics/computerGraphics.html
+++ b/computerGraphics/computerGraphics.html
@@ -107,11 +107,10 @@
   
         <div class="about-back">
               <h4>About</h4>
-              <p>Shoaib Zaheer an afghan artist, at present base in Belgium, 
-                 I am self study & motivated artiest, able to work with different art media (water color, 
-                 oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic) computer graphic designer, 
-                 animator, illustrator, 3D model, video editor amd HTML, CSS code writer, 
-                 with little bit JavaScript knowledge. <br><a href="../about.html">Read More...</a>
+              <p>Shoaib Zaheer an afghan artist, at present base in Belgium, I am self study & motivated artiest,
+                able to work with different art media (water color, oil color, pencil, charcoal, calligraphy,
+                miniature, wood Mosaic) in addition with an interest in computer graphic designing, animation, illustration, 3D model, video editing 
+                and like to explore the world of computer code writing like HTML, CSS. <br><a href="../about.html">Read More...</a>
                </p>
         </div>
     
