--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
 
     <div class="box">
       <div class="imgBox">
-        <img src="images/img4.jpg" alt="LandScape">
+        <img src="images/img6.jpg" alt="LandScape">
           <div class="details">
             <div class="content">
               <h2>Pencil and Charcoal</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero eveniet modi culpa </p>
-                 <a href="./Minuter/minuter.html" class="btn">Read More</a>
+                 <a href="./pencil&charcoal/Pencil&Charcoal.html" class="btn">Read More</a>
             </div>  
           </div>
         </div>
@@ -157,10 +157,10 @@
   
         <div class="about-back">
               <h4>About</h4>
-              <p>Shoaib Zaheer an afghan artist, at present base in Belgium, 
-                I am self study & motivated artiest, able to work with different art media (water color, 
-                oil color, pencil, charcoal, calligraphy, miniature, wood Mosaic) computer graphic designer, 
-                animator, illustrator, 3D model, video editor amd HTML, CSS code writer, 
+              <p>Shoaib Zaheer an afghan artist, at present base in Belgium, I am self study & motivated artiest,
+                able to work with different art media (water color, oil color, pencil, charcoal, calligraphy,
+                miniature, wood Mosaic) in addition with an interest in computer graphic designing, animation, illustration, 3D model, video editing 
+                and like to explore the world of computer code writing like HTML, CSS. 
                 with little bit JavaScript knowledge. <br><a href="about.html">Read More...</a>
                </p>
         </div>
